Fixed error where content elements overlapped (mistake with dispaly on wrapper)

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ nav{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	z-index: 3;
 }
 
 h1{
@@ -90,8 +91,6 @@ h3{
 }
 
 #wrapper{
-  position: relative;
-	display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
@@ -153,8 +152,8 @@ a:hover, a:focus, a:active{
 #titleblock{
 	margin-top: 210px;
   margin-bottom: 50px;
-	display: relative;
 	max-height: 500px;
+	position: relative;
 	overflow: hidden;
 }
 
@@ -173,6 +172,7 @@ a:hover, a:focus, a:active{
   grid-column: 3 / span 6;
   display: inline-grid;
   align-items: center;
+	position: relative;
 }
 
 .popupheader{
